[project]
name = "DDH"
version = "0.0"
authors = [
  { name="Martin Gfeller", email="martin.gfeller@swisscom.com" },
]
description = "Digital Data Hub - Experimental Software"
readme = "README.md"
requires-python = ">=3.11"
License = "MIT"
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: FastAPI"
]

homepage = "https://github.com/mcgfeller/DDH/"
documentation = "https://github.com/mcgfeller/DDH/wiki"
repository = "https://github.com/python-poetry/poetry"

[project.urls]
"Bug Tracker" = "https://github.com/mcgfeller/DDH/issues/"